kyy-k8s-config/src/staging/php/php-office/m-office-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: m-office
  name: m-office
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: m-office
