kyy-k8s-config/src/staging/php/php-office/m-office-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: m-office
  name: m-office
spec:
  rules:
    - host: m.0791office.cn
      http:
        paths:
          - backend:
              serviceName: m-office
              servicePort: 80
